tests/dataset/tpc-ds/compiler/c/q79.error
/tmp/TestCCompiler_TPCDS_Goldenq79141551693/001/prog.c: In function ‘test_TPCDS_Q79_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq79141551693/001/prog.c:281:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  281 |   if (test_TPCDS_Q79_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq79141551693/001/prog.c:285:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  285 |       if (test_TPCDS_Q79_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq79141551693/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq79141551693/001/prog.c:320:29: warning: implicit declaration of function ‘result_item_list_t_create’ [-Wimplicit-function-declaration]
  320 |   result_item_list_t tmp4 = result_item_list_t_create(agg.len * customer.len);
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq79141551693/001/prog.c:320:73: error: ‘(customer_t *)&customer’ is a pointer; did you mean to use ‘->’?
  320 |   result_item_list_t tmp4 = result_item_list_t_create(agg.len * customer.len);
      |                                                                         ^
      |                                                                         ->
/tmp/TestCCompiler_TPCDS_Goldenq79141551693/001/prog.c:326:37: error: request for member ‘customer_sk’ in something not a structure or union
  326 |       if (!(c.c_customer_sk == a.key.customer_sk)) {
      |                                     ^
/tmp/TestCCompiler_TPCDS_Goldenq79141551693/001/prog.c:331:56: error: request for member ‘city’ in something not a structure or union
  331 |                                         .s_city = a.key.city,
      |                                                        ^
/tmp/TestCCompiler_TPCDS_Goldenq79141551693/001/prog.c:332:66: error: request for member ‘ticket’ in something not a structure or union
  332 |                                         .ss_ticket_number = a.key.ticket,
      |                                                                  ^
/tmp/TestCCompiler_TPCDS_Goldenq79141551693/001/prog.c:348:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  348 |     _json_string(it.c_last_name);
      |                  ~~^~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq79141551693/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq79141551693/001/prog.c:352:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  352 |     _json_string(it.c_first_name);
      |                  ~~^~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq79141551693/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq79141551693/001/prog.c:372:38: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  372 |   test_TPCDS_Q79_simplified_result = result;
      |                                      ^~~~~~
